--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
   },
   "homepage": "https://github.com/jasonhaxstuff/machoapi#readme",
   "dependencies": {
+    "@types/express": "^4.16.0",
+    "@types/jsonwebtoken": "^7.2.8",
+    "@types/node": "^10.5.2",
+    "@types/passport": "^0.4.5",
+    "@types/pg": "^7.4.10",
+    "@types/request": "^2.47.1",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
@@ -30,7 +36,9 @@
     "passport": "^0.4.0",
     "passport-openid": "^0.4.0",
     "pg": "^7.4.3",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "tsc": "^1.20150623.0",
+    "typescript": "^2.9.2"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
