--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,9 @@
     "module": "commonjs",
     "target": "es6",
     "outDir": "out",
-    "rootDir": "",
-    "lib": [
-      "es6"
-    ],
-    "sourceMap": true
+    "rootDir": "src",
+    "sourceMap": false
   },
-  "include": [
-    "app",
-    "config",
-    "index.ts"
-  ],
   "exclude": [
     "node_modules",
     "out"
