--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
-    "machobot-database": "^0.0.16",
+    "machobot-database": "0.1.0",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-openid": "^0.4.0",
